compiler/testData/diagnostics/tests/classLiteral/unresolvedClass.kt
// RUN_PIPELINE_TILL: FRONTEND
val u = <!UNRESOLVED_REFERENCE!>Unresolved<!>::class
val g = <!UNRESOLVED_REFERENCE!>UnresolvedGeneric<!><<!UNRESOLVED_REFERENCE!>UnresolvedTypeArg<!>>::class

/* GENERATED_FIR_TAGS: classReference, propertyDeclaration */
